--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -15,7 +15,8 @@
     "gen": "cross-env SLS_ENV=release NODE_ENV=production node ./scripts/genCfg.js",
     "deploy": "npm run gen && npm run generate && components deploy && node ./scripts/refresh-cdn-urls.js",
     "check:upgrade": "yarn upgradeInteractive --latest",
-    "sls:info": "components info"
+    "sls:info": "components info",
+    "gen:theme": "node scripts/theme.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
@@ -33,10 +34,10 @@
     "@tailwindcss/typography": "^0.5.0",
     "@types/qrcode": "^1.4.2",
     "aegis-web-sdk": "^1.24.49",
-    "ansicolor": "^1.1.95",
+    "ansicolor": "^1.1.100",
     "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.20.2",
+    "core-js": "^3.20.3",
     "dayjs": "^1.10.7",
     "dompurify": "^2.3.4",
     "dplayer": "^1.26.0",
@@ -52,41 +53,41 @@
     "js-cookie": "^3.0.1",
     "jszip": "^3.7.1",
     "lodash": "^4.17.21",
-    "marked": "^4.0.8",
+    "marked": "^4.0.10",
     "nuxt": "^2.15.8",
     "qrcode": "^1.5.0",
     "sitemap": "^7.1.0",
     "svg4everybody": "^2.1.9",
     "swiper": "6.8.4",
     "uuid": "^8.3.2",
-    "vant": "^2.12.37",
+    "vant": "^2.12.38",
     "vue-aplayer": "^1.6.1",
-    "vue-echarts": "6.0.0",
-    "vue-relation-graph": "1.0.0-alpha.1",
+    "vue-echarts": "6.0.1",
+    "vue-relation-graph": "1.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@serverless/components": "^3.18.1",
-    "@types/file-saver": "^2.0.4",
+    "@types/file-saver": "^2.0.5",
     "@types/offscreencanvas": "^2019.6.4",
-    "@types/tailwindcss": "^3.0.1",
+    "@types/tailwindcss": "^3.0.2",
     "@vue/composition-api": "^1.4.3",
     "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
-    "cli-progress": "^3.9.1",
+    "cli-progress": "^3.10.0",
     "cos-nodejs-sdk-v5": "^2.11.6",
     "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
+    "dotenv": "^12.0.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
@@ -98,9 +99,9 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "reading-time": "^1.5.0",
-    "sass": "1.45.2",
+    "sass": "1.48.0",
     "sass-loader": "^10.0.0",
-    "serverless-config-generator": "^1.0.4",
+    "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -108,8 +109,9 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-scss": "^4.1.0",
     "tailwind-config-viewer": "^1.6.3",
-    "tailwindcss": "^3.0.11",
-    "tencentcloud-sdk-nodejs": "^4.0.266",
+    "tailwind-css-variables-theme-generator": "^0.1.0",
+    "tailwindcss": "^3.0.15",
+    "tencentcloud-sdk-nodejs": "^4.0.273",
     "worker-loader": "^3.0.8"
   }
 }
