--- a/packages/@som/vue3/package.json
+++ b/packages/@som/vue3/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vue3",
   "version": "0.0.0",
-  "private":true,
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "generate:theme":"node scripts/theme.js"
+    "generate:theme": "node scripts/theme.js"
   },
   "dependencies": {
+    "@types/d3": "^7.1.0",
+    "d3": "^7.3.0",
     "echarts": "^5.2.2",
     "element-plus": "^1.3.0-beta.9",
     "vue": "^3.2.25",
