--- a/packages/@som/react-app/package.json
+++ b/packages/@som/react-app/package.json
@@ -3,11 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formily/antd": "^2.0.9",
+    "@formily/core": "^2.0.9",
+    "@formily/react": "^2.0.9",
+    "antd": "^4.18.6",
+    "classnames": "^2.3.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.16",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "7.12.1",
@@ -16,16 +29,9 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "react-scripts": "5.0.0",
     "sass": "^1.49.7",
-    "typescript": "^4.5.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.16",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "react-scripts": "5.0.0"
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
