--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formily/core": "^2.0.9",
+    "@formily/element": "^2.0.9",
+    "@formily/vue": "^2.0.9",
     "@popperjs/core": "^2.11.2",
-    "@vue/composition-api": "^1.4.4",
+    "@vue/composition-api": "^1.4.6",
+    "ant-design-vue": "^1.7.8",
     "core-js": "^3.20.3",
     "d3": "^7.3.0",
     "d3-org-chart": "^2.6.0",
