--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -19,29 +19,29 @@
     "gen:theme": "node scripts/theme.js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.0",
-    "@cloudbase/js-sdk": "^1.7.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@babel/runtime": "^7.17.2",
+    "@cloudbase/js-sdk": "^1.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@nuxtjs/tailwindcss": "^5.0.0-4",
     "@popperjs/core": "^2.11.2",
-    "@tailwindcss/typography": "^0.5.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/qrcode": "^1.4.2",
-    "aegis-web-sdk": "^1.24.49",
+    "aegis-web-sdk": "^1.35.21",
     "ansicolor": "^1.1.100",
-    "axios": "^0.25.0",
+    "axios": "^0.26.0",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.21.0",
+    "core-js": "^3.21.1",
     "d3": "^7.3.0",
     "dayjs": "^1.10.7",
-    "dompurify": "^2.3.5",
+    "dompurify": "^2.3.6",
     "dplayer": "^1.26.0",
     "echarts": "^5.3.0",
     "element-ui": "^2.15.3",
@@ -69,7 +69,7 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
+    "@babel/core": "^7.17.4",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
@@ -81,8 +81,8 @@
     "@serverless/components": "^3.18.2",
     "@types/file-saver": "^2.0.5",
     "@types/offscreencanvas": "^2019.6.4",
-    "@types/tailwindcss": "^3.0.7",
-    "@vue/composition-api": "^1.4.5",
+    "@types/tailwindcss": "^3.0.8",
+    "@vue/composition-api": "^1.4.6",
     "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
@@ -90,7 +90,7 @@
     "cos-nodejs-sdk-v5": "^2.11.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -105,15 +105,15 @@
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
-    "stylelint": "^14.3.0",
+    "stylelint": "^14.5.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^5.0.2",
-    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard": "^25.0.0",
     "stylelint-scss": "^4.1.0",
     "tailwind-config-viewer": "^1.6.3",
     "tailwind-css-variables-theme-generator": "^0.1.3",
-    "tailwindcss": "^3.0.18",
-    "tencentcloud-sdk-nodejs": "^4.0.284",
+    "tailwindcss": "^3.0.23",
+    "tencentcloud-sdk-nodejs": "^4.0.290",
     "worker-loader": "^3.0.8"
   }
 }
