--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.17.2",
     "@cloudbase/js-sdk": "^1.7.2",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
@@ -69,13 +69,13 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.4",
+    "@babel/core": "^7.17.5",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
-    "@nuxtjs/composition-api": "^0.31.0",
+    "@nuxtjs/composition-api": "^0.32.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@serverless/components": "^3.18.2",
@@ -91,7 +91,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "glob": "^7.2.0",
@@ -101,11 +101,11 @@
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "reading-time": "^1.5.0",
-    "sass": "1.49.7",
+    "sass": "1.49.8",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
-    "stylelint": "^14.5.1",
+    "stylelint": "^14.5.2",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-config-standard": "^25.0.0",
@@ -113,7 +113,7 @@
     "tailwind-config-viewer": "^1.6.3",
     "tailwind-css-variables-theme-generator": "^0.1.3",
     "tailwindcss": "^3.0.23",
-    "tencentcloud-sdk-nodejs": "^4.0.290",
+    "tencentcloud-sdk-nodejs": "^4.0.293",
     "worker-loader": "^3.0.8"
   }
 }
