--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -16,7 +16,8 @@
     "deploy": "npm run gen && npm run generate && components deploy && node ./scripts/refresh-cdn-urls.js",
     "check:upgrade": "yarn upgradeInteractive --latest",
     "sls:info": "components info",
-    "gen:theme": "node scripts/theme.js"
+    "gen:theme": "node scripts/theme.js",
+    "format": "prettier client/**/*.vue"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
@@ -100,6 +101,7 @@
     "less-loader": "^7.0.0",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "reading-time": "^1.5.0",
     "sass": "1.49.9",
     "sass-loader": "^10.0.0",
