--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -20,28 +20,28 @@
     "format": "prettier client/**/*.vue"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
+    "@babel/runtime": "^7.17.8",
     "@cloudbase/js-sdk": "^1.7.2",
-    "@fortawesome/fontawesome-svg-core": "1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "^5.0.0-4",
-    "@popperjs/core": "^2.11.2",
+    "@nuxtjs/tailwindcss": "^5.0.2",
+    "@popperjs/core": "^2.11.4",
     "@tailwindcss/typography": "^0.5.2",
     "@types/qrcode": "^1.4.2",
-    "aegis-web-sdk": "^1.35.21",
+    "aegis-web-sdk": "^1.35.25",
     "ansicolor": "^1.1.100",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "copy-text-to-clipboard": "^3.0.1",
     "core-js": "^3.21.1",
     "d3": "^7.3.0",
-    "dayjs": "^1.10.8",
+    "dayjs": "^1.11.0",
     "dompurify": "^2.3.6",
     "dplayer": "^1.26.0",
     "echarts": "^5.3.0",
@@ -51,7 +51,7 @@
     "gemoji": "^7.1.0",
     "github-markdown-css": "^5.1.0",
     "gsap": "^3.9.1",
-    "is-mobile": "^3.1.0",
+    "is-mobile": "^3.1.1",
     "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
     "jszip": "^3.7.1",
@@ -61,7 +61,7 @@
     "qrcode": "^1.5.0",
     "sitemap": "^7.1.1",
     "svg4everybody": "^2.1.9",
-    "swiper": "6.8.4",
+    "swiper": "8.0.7",
     "uuid": "^8.3.2",
     "vant": "^2.12.39",
     "vue-aplayer": "^1.6.1",
@@ -70,36 +70,36 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/composition-api": "^0.32.0",
-    "@nuxtjs/eslint-config": "^8.0.0",
+    "@nuxtjs/eslint-config": "^9.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@serverless/components": "^3.18.2",
     "@types/file-saver": "^2.0.5",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/tailwindcss": "^3.0.9",
     "@vue/composition-api": "^1.4.9",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.4",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
     "cli-progress": "^3.10.0",
     "cos-nodejs-sdk-v5": "^2.11.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "glob": "^7.2.0",
     "klaw": "^4.0.1",
     "less": "^4.1.2",
     "less-loader": "^7.0.0",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "reading-time": "^1.5.0",
@@ -107,15 +107,15 @@
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
-    "stylelint": "^14.5.3",
+    "stylelint": "^14.6.1",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^25.0.0",
-    "stylelint-scss": "^4.1.0",
+    "stylelint-scss": "^4.2.0",
     "tailwind-config-viewer": "^1.6.3",
     "tailwind-css-variables-theme-generator": "^0.1.3",
     "tailwindcss": "^3.0.23",
-    "tencentcloud-sdk-nodejs": "^4.0.301",
+    "tencentcloud-sdk-nodejs": "^4.0.315",
     "worker-loader": "^3.0.8"
   }
 }
