--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -57,6 +57,7 @@
     "jszip": "^3.8.0",
     "lodash": "^4.17.21",
     "marked": "^4.0.12",
+    "md2cwm": "^1.0.4",
     "nuxt": "^2.15.8",
     "qrcode": "^1.5.0",
     "sitemap": "^7.1.1",
