--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -50,6 +50,7 @@
     "file-saver": "^2.0.5",
     "gemoji": "^7.1.0",
     "github-markdown-css": "^5.1.0",
+    "github-repository-distributor": "^1.1.1",
     "gsap": "^3.10.2",
     "is-mobile": "^3.1.1",
     "js-base64": "^3.7.2",
