--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.0",
     "element-ui": "^2.15.6",
     "javascript-stringify": "^2.1.0",
+    "nanoid": "^3.3.2",
     "simple-lodash-template-loader": "^1.0.5",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
