--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -39,9 +39,9 @@
     "ansicolor": "^1.1.100",
     "axios": "^0.26.1",
     "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.21.1",
+    "core-js": "^3.22.0",
     "d3": "^7.4.0",
-    "dayjs": "^1.11.0",
+    "dayjs": "^1.11.1",
     "dompurify": "^2.3.6",
     "dplayer": "^1.26.0",
     "echarts": "^5.3.2",
@@ -63,12 +63,12 @@
     "qrcode": "^1.5.0",
     "sitemap": "^7.1.1",
     "svg4everybody": "^2.1.9",
-    "swiper": "8.0.7",
+    "swiper": "8.1.1",
     "uuid": "^8.3.2",
     "vant": "^2.12.39",
     "vue-aplayer": "^1.6.1",
     "vue-echarts": "6.0.2",
-    "vue-frame-selection": "^0.0.2",
+    "vue-frame-selection": "^1.0.0",
     "vue-relation-graph": "1.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
@@ -89,7 +89,7 @@
     "@vue/composition-api": "^1.4.9",
     "babel-loader": "^8.2.4",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-import": "^1.13.5",
     "cli-progress": "^3.10.0",
     "cos-nodejs-sdk-v5": "^2.11.6",
     "cross-env": "^7.0.3",
@@ -98,7 +98,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "glob": "^7.2.0",
+    "glob": "^8.0.1",
     "klaw": "^4.0.1",
     "less": "^4.1.2",
     "less-loader": "^7.0.0",
@@ -106,11 +106,12 @@
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "reading-time": "^1.5.0",
-    "sass": "1.49.10",
+    "sass": "1.50.0",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
-    "stylelint": "^14.6.1",
+    "speed-measure-webpack-plugin": "^1.5.0",
+    "stylelint": "^14.7.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^25.0.0",
@@ -118,7 +119,7 @@
     "tailwind-config-viewer": "^1.6.3",
     "tailwind-css-variables-theme-generator": "^0.1.3",
     "tailwindcss": "^3.0.23",
-    "tencentcloud-sdk-nodejs": "^4.0.319",
+    "tencentcloud-sdk-nodejs": "^4.0.326",
     "worker-loader": "^3.0.8"
   }
 }
