--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -13,7 +13,7 @@
     "@formily/vue": "^2.0.18",
     "@popperjs/core": "^2.11.5",
     "@vue/composition-api": "^1.4.9",
-    "ant-design-vue": "^1.7.8",
+    "ant-design-vue": "1.7.8",
     "core-js": "^3.21.1",
     "d3": "^7.4.3",
     "d3-org-chart": "^2.6.0",
