--- a/.github/workflows/blog-deployer.yml
+++ b/.github/workflows/blog-deployer.yml
@@ -24,16 +24,17 @@ jobs:
       #     token: ${{ secrets.PERSONAL_TOKEN }}
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Self Repo # with cd command
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: 'true'
           token: ${{ secrets.PERSONAL_TOKEN }}
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-          cache: yarn
-          cache-dependency-path: packages/@som/blog/yarn.lock
+          node-version: '16.x'
+          cache: 'yarn'
+          cache-dependency-path: 'packages/@som/blog/yarn.lock'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
         run: yarn install:blog
