--- a/packages/@som/vue3/package.json
+++ b/packages/@som/vue3/package.json
@@ -9,32 +9,32 @@
     "generate:theme": "node scripts/theme.js"
   },
   "dependencies": {
-    "@types/d3": "^7.1.0",
-    "d3": "^7.3.0",
-    "echarts": "^5.2.2",
-    "element-plus": "^1.3.0-beta.9",
-    "vue": "^3.2.25",
-    "vue-echarts": "^6.0.2",
-    "vue-router": "4"
+    "@types/d3": "^7.4.0",
+    "d3": "^7.4.4",
+    "echarts": "^5.3.2",
+    "element-plus": "^2.2.2",
+    "vue": "^3.2.36",
+    "vue-echarts": "^6.0.3",
+    "vue-router": "4.0.15"
   },
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "7.12.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-vue": "^8.3.0",
-    "postcss": "^8.4.5",
-    "sass": "^1.49.0",
-    "tailwind-css-variables-theme-generator": "^0.1.1",
-    "tailwindcss": "^3.0.15",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.16.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "postcss": "^8.4.14",
+    "sass": "^1.52.1",
+    "tailwind-css-variables-theme-generator": "^0.1.3",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.7.2",
+    "vite": "^2.9.9",
+    "vue-tsc": "^0.34.16"
   }
 }
