--- a/package.json
+++ b/package.json
@@ -19,23 +19,12 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/sonofmagic.github.io/issues"
   },
-  "scripts": {
-    "dev": "lerna run dev --scope @som/blog",
-    "gen": "lerna run gen",
-    "deploy": "lerna run deploy",
-    "install:blog": "cd packages/@som/blog && yarn",
-    "deploy:blog": "cd packages/@som/blog && npm run deploy",
-    "sync:article": "cd packages/@som/blog && npm run sync",
-    "genChangelog": "node scripts/genChangelog.js"
-  },
+  "scripts": {},
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "execa": "^5.0.0",
-    "lerna": "^3.22.1",
-    "lerna-changelog": "^1.0.1",
     "prettier": "^2.6.2",
-    "simple-git": "^2.31.0",
-    "yargs": "^16.2.0"
+    "turbo": "^1.3.1"
   }
 }
