--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "description": "a serverless nuxt website",
   "author": "icebreaker99 <qq1324318532@gmail.com>",
   "homepage": "http://www.icebreaker.top/",
+  "workspaces": {
+    "nohoist": [],
+    "packages": [
+      "packages/*",
+      "apps/*",
+      "!**/@som/**"
+    ]
+  },
   "directories": {
     "packages": "packages"
   },
@@ -19,7 +27,9 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/sonofmagic.github.io/issues"
   },
-  "scripts": {},
+  "scripts": {
+    "dev": "turbo run dev"
+  },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
