--- a/package.json
+++ b/package.json
@@ -31,10 +31,19 @@
     "dev": "turbo run dev"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
+    "eslint": "8.0.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "15.0.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-vue": "^9.1.1",
     "execa": "^5.0.0",
     "prettier": "^2.6.2",
-    "turbo": "^1.3.1"
+    "turbo": "^1.3.1",
+    "typescript": "^4.7.4"
   }
 }
