--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -9,6 +9,10 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.4"
+    "@nuxt/content": "^2.0.1",
+    "autoprefixer": "^10.4.7",
+    "nuxt": "3.0.0-rc.4",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   }
 }
