--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "eslint": "8.0.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-n": "15.0.0",
@@ -45,6 +46,7 @@
     "eslint-plugin-vue": "^9.1.1",
     "execa": "^5.0.0",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "turbo": "^1.3.1",
     "typescript": "^4.7.4"
   }
