--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
+    "@nuxtjs/color-mode": "^3.1.4",
+    "@tailwindcss/typography": "^0.5.2",
     "nuxt": "3.0.0-rc.4",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4"
