--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -15,5 +15,12 @@
     "nuxt": "3.0.0-rc.4",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.1"
   }
 }
