--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -44,7 +44,6 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "sass": "^1.62.1",
-    "sitemap": "^7.1.1",
-    "typescript": "^5.1.3"
+    "sitemap": "^7.1.1"
   }
 }
