--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "node scripts/deploy.cjs"
+    "deploy": "node scripts/deploy.cjs",
+    "raw":"node scripts/selector-parser.cjs"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
@@ -45,6 +46,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "postcss-scss": "^4.0.6",
+    "postcss-selector-parser": "^6.0.13",
     "sass": "^1.63.3",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.2",
