--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -8,53 +8,55 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "node scripts/deploy.cjs",
-    "raw":"node scripts/selector-parser.cjs"
+    "raw": "node scripts/selector-parser.cjs",
+    "postinstall": "tw-patch install"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@supabase/supabase-js": "^2.24.0",
-    "@tanstack/vue-query": "^4.29.11",
-    "@vant/use": "^1.5.1",
-    "@vueuse/components": "^10.1.2",
-    "@vueuse/core": "^10.1.2",
-    "@vueuse/integrations": "^10.1.2",
+    "@supabase/supabase-js": "^2.32.0",
+    "@tanstack/vue-query": "^4.32.6",
+    "@vant/use": "^1.5.2",
+    "@vueuse/components": "^10.3.0",
+    "@vueuse/core": "^10.3.0",
+    "@vueuse/integrations": "^10.3.0",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.6",
+    "element-plus": "^2.3.9",
     "js-cookie": "^3.0.5",
     "nanoid": "^4.0.2",
     "path-browserify": "^1.0.1",
-    "pinia": "^2.1.3",
-    "pinia-plugin-persistedstate": "^3.1.0",
-    "swiper": "^9.3.2",
-    "validator": "^13.9.0",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "swiper": "^10.1.0",
+    "validator": "^13.11.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@icebreakers/deploy": "^0.1.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/js-cookie": "^3.0.3",
     "@types/path-browserify": "^1.0.0",
-    "@types/validator": "^13.7.17",
+    "@types/validator": "^13.11.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
     "postcss-scss": "^4.0.6",
     "postcss-selector-parser": "^6.0.13",
-    "sass": "^1.63.3",
-    "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3",
-    "unplugin-auto-import": "^0.16.4",
-    "unplugin-icons": "^0.16.3",
+    "sass": "^1.65.1",
+    "tailwind-css-variables-theme-generator": "^0.4.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-patch": "^2.1.0",
+    "typescript": "^5.1.6",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.3.9",
-    "vue-tsc": "^1.6.5"
+    "vite": "^4.4.9",
+    "vue-tsc": "^1.8.8"
   }
 }
