--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -19,15 +19,15 @@
     "sls:info": "components info",
     "gen:theme": "node scripts/theme.js",
     "format": "prettier client/**/*.vue",
-    "prepare": "tw-patch"
+    "prepare": "tw-patch install"
   },
   "dependencies": {
     "@babel/helper-explode-assignable-expression": "^7.18.6",
-    "@babel/runtime": "^7.22.6",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@babel/runtime": "^7.22.10",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^2.0.9",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/feed": "^2.0.0",
@@ -69,16 +69,16 @@
     "uuid": "^9.0.0",
     "vant": "^2.12.39",
     "vue-aplayer": "^1.6.1",
-    "vue-echarts": "6.6.0",
+    "vue-echarts": "6.6.1",
     "vue-frame-selection": "^1.0.1",
     "vue-relation-graph": "1.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/eslint-parser": "^7.22.9",
-    "@babel/plugin-transform-runtime": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "@icebreakers/deploy": "^0.1.4",
     "@nicolo-ribaudo/semver-v6": "^6.3.3",
     "@nuxt/types": "^2.17.1",
@@ -94,22 +94,22 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-import": "^1.13.8",
     "cli-progress": "^3.12.0",
-    "cos-nodejs-sdk-v5": "^2.12.3",
+    "cos-nodejs-sdk-v5": "^2.12.4",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "glob": "^10.3.3",
     "klaw": "^4.1.0",
-    "less": "^4.1.3",
+    "less": "^4.2.0",
     "less-loader": "^7.0.0",
     "postcss": "^8.4.27",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "reading-time": "^1.5.0",
-    "sass": "1.64.1",
+    "sass": "1.65.1",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
@@ -118,13 +118,13 @@
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-standard": "^34.0.0",
-    "stylelint-scss": "^5.0.1",
+    "stylelint-scss": "^5.1.0",
     "tailwind-config-viewer": "^1.7.2",
-    "tailwind-css-variables-theme-generator": "^0.3.8",
+    "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^1.2.7",
-    "tencentcloud-sdk-nodejs": "^4.0.653",
-    "unplugin-tailwindcss-mangle": "^1.2.7",
+    "tailwindcss-patch": "^2.1.0",
+    "tencentcloud-sdk-nodejs": "^4.0.662",
+    "unplugin-tailwindcss-mangle": "^2.1.0",
     "worker-loader": "^3.0.8"
   },
   "resolutions": {
