--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -19,7 +19,8 @@
     "sls:info": "components info",
     "gen:theme": "node scripts/theme.js",
     "format": "prettier client/**/*.vue",
-    "prepare": "tw-patch install"
+    "prepare": "tw-patch install",
+    "test": "vitest"
   },
   "dependencies": {
     "@babel/helper-explode-assignable-expression": "^7.18.6",
@@ -125,6 +126,7 @@
     "tailwindcss-patch": "^2.2.2",
     "tencentcloud-sdk-nodejs": "^4.0.699",
     "unplugin-tailwindcss-mangle": "^2.2.2",
+    "vitest": "^0.34.6",
     "worker-loader": "^3.0.8"
   },
   "resolutions": {
