--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -5,74 +5,75 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
     "build:lib": "vite build"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.2.8",
-    "@formily/core": "^2.2.24",
-    "@formily/element": "^2.2.24",
-    "@formily/vue": "^2.2.24",
-    "@popperjs/core": "^2.11.7",
+    "@floating-ui/dom": "^1.6.3",
+    "@formily/core": "^2.3.1",
+    "@formily/element": "^2.3.1",
+    "@formily/vue": "^2.3.1",
+    "@popperjs/core": "^2.11.8",
     "@virtual-list/vue": "^1.2.0",
-    "@vue/composition-api": "^1.7.1",
-    "@vueuse/components": "^10.1.2",
-    "@vueuse/core": "^10.1.2",
+    "@vue/composition-api": "^1.7.2",
+    "@vueuse/components": "^10.9.0",
+    "@vueuse/core": "^10.9.0",
     "ant-design-vue": "1.7.8",
     "column-resizer": "^1.4.0",
-    "core-js": "^3.30.2",
-    "d3": "^7.8.4",
-    "d3-org-chart": "^2.7.0",
-    "dayjs": "^1.11.7",
-    "element-ui": "^2.15.13",
+    "core-js": "^3.36.0",
+    "d3": "^7.9.0",
+    "d3-org-chart": "^3.1.1",
+    "dayjs": "^1.11.10",
+    "element-ui": "^2.15.14",
     "javascript-stringify": "^2.1.0",
     "lodash-es": "^4.17.21",
-    "nanoid": "^4.0.2",
+    "nanoid": "^5.0.6",
     "simple-lodash-template-loader": "^1.0.5",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "vue": "^2.7.13",
     "vue-d3-org-chart": "^0.0.2",
-    "vue-demi": "^0.14.5",
+    "vue-demi": "^0.14.7",
     "vue-dom-sheet": "^0.3.10",
     "vue-fragment": "^1.6.0",
     "vue-router": "^3.2.0",
-    "vue-virtual-scroll-list": "^2.3.4",
+    "vue-virtual-scroll-list": "^2.3.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.0",
-    "@types/d3-org-chart": "^2.6.3",
-    "@types/lodash-es": "^4.17.7",
+    "@types/d3": "^7.4.3",
+    "@types/d3-org-chart": "^3.1.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "@volar-plugins/vetur": "latest",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@volar-plugins/vetur": "^2.0.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.14.0",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.8",
+    "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "~5.4.2",
+    "vite": "^5.1.6",
     "vite-plugin-vue2": "^2.0.3",
-    "vue-template-compiler": "^2.7.14",
-    "vue-tsc": "^1.6.5"
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^2.0.6"
   }
 }
